--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 10px;
   font-size: 1rem;
   font-weight: 400;
   color: #7F56C5;
@@ -71,4 +72,53 @@
 .PaginationArrows {
   color: #1DAFE9;
   padding-left: 10px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+thead {
+  background: #CACBCE;
+}
+
+thead tr {
+  height: 32px;
+}
+
+thead th {
+  padding: 0 0 0 13px;
+  font-size: .75rem;
+  font-weight: 700;
+  color: #282653;
+  text-align: left;
+}
+
+table th:first-child{
+  border-radius:3px 0 0 0;
+}
+
+table th:last-child{
+  border-radius:0 3px 0 0;
+}
+
+tbody tr {
+  height: 32px;
+}
+
+tbody td {
+  padding: 0 0 0 13px;
+  font-size: .75rem;
+  font-weight: 400;
+  color: #808285;
+}
+
+tbody {
+  background: #F0F0F0;
+}
+
+tbody tr:nth-child(odd) {
+  background: #F7F7F7;
 }
