--- a/public/style.css
+++ b/public/style.css
@@ -26,11 +26,22 @@ nav li {
   float: left;
   height: inherit;
   line-height: 50px;
+}
+
+nav li:hover {
+  background: #7F56C5;
+  color: #FFFFFF;
+}
+
+nav a {
+  display: block;
+  color: inherit;
+  text-decoration: none;
   padding-left: 30px;
   padding-right: 30px;
 }
 
-nav li:hover {
+.selected {
   background: #7F56C5;
   color: #FFFFFF;
 }
